tests/expectations/compiler/strings/string.out
Error [ETYC0372045]: Strings are not yet supported.
    --> compiler-test:4:9
     |
   4 |         let str: string = "a a a";
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
